--- a/css/style.css
+++ b/css/style.css
@@ -283,12 +283,38 @@ nav ul li {
   width: 3rem;
   height: 3rem;
 }
+/* spacing on all sections*/
+#contact{
+	margin-top:4rem;
+	padding-top:4rem;
+}
+
+
+
+  
+  
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media screen and (max-width: 720px) {
   /*changes reflects on screen with a width of 720px and below*/
 	.nav {
 		padding: 1.5rem 1rem;
   }
-	nav ul {
+nav ul {
     position: fixed;
     background-color: var(--bg-color);
     flex-direction: column;
@@ -303,13 +329,18 @@ nav ul li {
     nav ul li {
     margin: 8px;
   }
-  .burger-menu {
+ 
+  	.burger-menu {
     display: block;
   }
 
   nav ul.show {
     transform: translateX(0);
   }
+
+  
+    
+  
   .hero {
     margin-top: -4rem;
     flex-direction: column;
@@ -370,3 +401,4 @@ nav ul li {
     max-width: 17.75rem;
   }
 } 
+
